--- a/challenge-8/assets/css/style-8.css
+++ b/challenge-8/assets/css/style-8.css
@@ -4,7 +4,15 @@
 
 body {
     background-color: #AEB8FE;
-    display: flex;
+}
+
+#dice-number {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 50px;
+    margin-top: 100px;
+    margin-bottom: 20px;
 }
 
 #dice {
@@ -12,7 +20,8 @@ body {
     height: 210px;
     border-radius: 10px;
     background-color: #EFE5DC;
-    margin: 200px auto;
+    margin: 0 auto;
+    padding-top: 1px;
 }
 
 .dot {
