--- a/challenge-15/assets/css/style-15.css
+++ b/challenge-15/assets/css/style-15.css
@@ -52,6 +52,7 @@ img {
     display: grid;
     grid-template-columns: repeat(5, auto);
     transform: translateX(0);
+    transition: all 0.6s ease-in-out;
 }
 
 .card {
