--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+* {
+    margin: 0;
+}
+
+body {
+    background: rgb(255, 225, 150);
+}
+
+header {
+    background: rgb(255, 195, 91);
+    padding: 20px;
+}
+
 main {
     padding: 20px;
     margin: 20px;
