1/CSS: Modify html to add text, modify css to apply background styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background: rgb(255, 225, 150);
+    font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -12,6 +12,9 @@ header {
 }
 
 main {
+    background: rgb(255, 225, 150);
+    border-radius: 30px;
     padding: 20px;
-    margin: 20px;
+    margin: 50px auto;
+    width: 60%;
 }
