--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ button {
 }
 
 .input-width-btn {
-    width: 148px;
+    width: 149px;
 }
 
 label {
@@ -37,7 +37,7 @@ header {
 main {
     background: rgb(255, 225, 150);
     border-radius: 30px;
-    padding: 20px;
+    padding: 40px 30px;
     margin: 50px auto;
     width: 60%;
 }
