CSS: Change span font colour

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,10 @@ input {
     border: none;
 }
 
+span {
+    color: rgb(199, 127, 19);
+}
+
 header {
     background: rgb(255, 195, 91);
     padding: 20px;
