--- a/challenge-8/assets/css/style-8.css
+++ b/challenge-8/assets/css/style-8.css
@@ -2,7 +2,7 @@
     visibility: hidden;
 }
 
-body {
+main {
     background-color: #AEB8FE;
 }
 
@@ -11,8 +11,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 50px;
-    margin-top: 100px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 40px;
 }
 
 #dice {
