--- a/challenge-23/assets/css/style-23.css
+++ b/challenge-23/assets/css/style-23.css
@@ -1,6 +1,5 @@
-body {
-background-color: #023F6A;
-font-family: sans-serif;
+h1 {
+    text-align: center;
 }
 
 .container {
@@ -25,7 +24,7 @@ textarea::placeholder {
 #counterFooter {
 margin-top: 0.2rem;
 font-size:0.8rem;
-color: #fff;
+color: black;
 margin-left:30%;
 font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
