--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,23 @@ header {
     padding: 20px;
 }
 
+header a {
+    font-size: 15px;
+    font-weight: 700;
+    text-decoration: none;
+    color: white;
+}
+
+.challenge-icon {
+    background: rgb(0, 0, 0);
+    height: 30px;
+    width: 30px;
+    border: none;
+    border-radius: 100%;
+    margin: 1px;
+    padding: 0;
+}
+
 main {
     background: rgb(255, 225, 150);
     border-radius: 30px;
