--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,10 +59,12 @@ header {
     background: rgb(255, 255, 255);
     border-bottom: solid 5px rgb(77, 77, 77);
     padding: 20px;
+    padding-left: 50px;
 }
 
 header a {
-    font-size: 15px;
+    font-family: 'Abril Fatface', cursive;
+    font-size: 18px;
     font-weight: 700;
     text-decoration: none;
     color: white;
@@ -70,11 +72,11 @@ header a {
 
 .challenge-icon {
     background: rgb(0, 0, 0);
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     border: none;
     border-radius: 100%;
-    margin: 1px;
+    margin: 0.1vw;
     padding: 0;
 }
 
