--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,17 +21,24 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    background: rgb(202, 213, 255);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
 }
 
 button {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    background: black;
+    background: rgb(249, 161, 10);
     color: white;
     height: 30px;
     width: 70px;
     border: none;
+}
+
+button:hover {
+    cursor: pointer;
+    background: rgb(211, 135, 3);
 }
 
 .input-width-btn {
@@ -47,8 +54,14 @@ label {
 }
 
 input {
+    background: rgb(254, 233, 182);
     height: 30px;
     border: none;
+}
+
+input:focus {
+    background: rgb(245, 212, 162);
+    outline: none;
 }
 
 span {
@@ -56,8 +69,7 @@ span {
 }
 
 header {
-    background: rgb(255, 255, 255);
-    border-bottom: solid 5px rgb(77, 77, 77);
+    background: rgb(202, 213, 255);
     padding: 20px;
     padding-left: 50px;
 }
@@ -81,9 +93,13 @@ header a {
 }
 
 main {
-    background: rgb(255, 225, 150);
+    background: white;
     border-radius: 30px;
     padding: 40px 30px;
     margin: 50px auto;
     width: 60%;
+}
+
+h1 {
+    font-family: 'Abril Fatface', cursive;
 }
