--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 button {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: 500;
     background: rgb(249, 161, 10);
     color: white;
@@ -80,6 +80,14 @@ header a {
     font-weight: 700;
     text-decoration: none;
     color: white;
+}
+
+header button:hover {
+    opacity: 0.7;
+}
+
+header button:focus {
+    outline: none;
 }
 
 .challenge-icon {
