--- a/assets/css/style-8.css
+++ b/assets/css/style-8.css
@@ -6,13 +6,16 @@ main {
     background-color: #AEB8FE;
 }
 
+h1 {
+    text-align: center;
+    font-size: 40px;
+}
+
 #dice-number {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 50px;
+    font-size: 35px;
     margin-top: 10px;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
 }
 
 #dice {
@@ -22,6 +25,7 @@ main {
     background-color: #EFE5DC;
     margin: 0 auto;
     padding-top: 1px;
+    cursor: pointer;
 }
 
 .dot {
