--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ button {
     font-weight: 500;
     background: rgb(249, 161, 10);
     color: white;
-    height: 30px;
+    height: 32px;
     width: 70px;
     border: none;
 }
@@ -45,8 +45,8 @@ button:hover {
     width: 149px;
 }
 
-.long {
-    width: 180px;
+.extra-wide-btn {
+    width: 200px;
 }
 
 label {
@@ -69,6 +69,7 @@ span {
 }
 
 header {
+    text-align: center;
     background: rgb(202, 213, 255);
     padding: 20px;
     padding-left: 50px;
@@ -105,7 +106,7 @@ main {
     border-radius: 30px;
     padding: 40px 30px;
     margin: 10px auto;
-    width: 60%;
+    width: 60vw;
 }
 
 h1 {
