--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,14 +11,29 @@
 }
 
 .backspace, #backspace {
-    background: rgb(216, 211, 211);
+    background: white;
+    border: solid 2px black;
     color: black;
 }
 
-.clear, #clear {
-    background: rgb(147, 143, 143);
-    color: black;
+.backspace:hover, #backspace:hover {
+    background: black;
+    border: none;
+    color: white;
 }
+
+.clear, #clear {
+    background: white;
+    border: solid 2px rgb(212, 85, 85);
+    color: rgb(212, 85, 85);
+}
+
+.clear:hover, #clear:hover {
+    background: rgb(212, 85, 85);
+    border: none);
+    color: white;
+}
+
 
 body {
     background: rgb(202, 213, 255);
@@ -37,8 +52,19 @@ button {
 }
 
 button:hover {
-    cursor: pointer;
     background: rgb(211, 135, 3);
+}
+
+main button:hover {
+    cursor: pointer;
+}
+
+main a {
+    color: rgb(184, 66, 86);
+}
+
+main a:hover {
+    font-weight: 700;
 }
 
 .input-width-btn {
