--- a/assets/css/style-15.css
+++ b/assets/css/style-15.css
@@ -14,7 +14,7 @@ main {
     padding: 0;
     text-align: center;
     display: grid;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 main img {
