--- a/assets/css/style-23.css
+++ b/assets/css/style-23.css
@@ -45,3 +45,9 @@ button h2 {
     opacity: .5;
     cursor: default;
 }
+
+@media (max-width: 500px) {
+    textarea, button {
+        width: 80%;
+    }
+}
